# Basics

./: .gitignore
arrays_and_strings/check_permutations/: CMakeLists.txt  checkPermutations.cpp  checkPermutations.h  main.cpp  test.cpp
arrays_and_strings/is_unique/: CMakeLists.txt  isUnique.cpp  isUnique.h  main.cpp  tests.cpp
arrays_and_strings/urlify/: CMakeLists.txt  main.cpp  tests.cpp  urlGen.cpp  urlGen.h
bit_manipulation/binary_to_string/: CMakeLists.txt  binary_to_string.h  main.cpp  test.cpp
bit_manipulation/flip_bit_to_win/: CMakeLists.txt  flip_bit_to_win.cpp
bit_manipulation/insertion/: CMakeLists.txt  insertion.cpp  insertion.h  main  main.cpp  test.cpp
